--- a/index.html
+++ b/index.html
@@ -533,6 +533,7 @@
     </style>
   </head>
   <body>
+   6LcmIuMiAAAAAK_uJKSTjqWlwMkadz9o6lBgAQKW
     <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-auth.js"></script>  
     <div id="fb-root"></div>
