--- a/index.html
+++ b/index.html
@@ -20,7 +20,14 @@
     <meta name="yandex-verification" content="2185da3345ca44f7" >
     <script async defer src="https://buttons.github.io/buttons.js"></script>   
     <script data-ad-client="ca-pub-9740800920365268" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>  
-    <style>
+     <script type="text/javascript">
+      var onloadCallback = function() {
+        grecaptcha.render('html_element', {
+          'sitekey' : '6LcmIuMiAAAAAK_uJKSTjqWlwMkadz9o6lBgAQKW'
+        });
+      };
+    </script>   
+	<style>
       /* --------------------------------------------
       ################################################
       # Tools For Mikrotik By BuanaNETPBun.Github.io
@@ -533,7 +540,7 @@
     </style>
   </head>
   <body>
-   6LcmIuMiAAAAAK_uJKSTjqWlwMkadz9o6lBgAQKW
+  
     <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-auth.js"></script>  
     <div id="fb-root"></div>
@@ -770,11 +777,20 @@
               <input style="margin-top:5px" type="email" id="login-email" placeholder="E-Mail">
               <label>Password</label>
               <input style="margin-top:5px" type="password" id="login-password" placeholder="Password">
-              <button style="width:100% !important;" id="login">Login</button>
+              			    <form action="?" method="POST">
+      <div id="html_element"></div>
+<button style="width:100% !important;" id="login">Login</button>
+    </form>
+			  
+			  
               <br>
               <span style="font-weight:normal"> <span id="forgot-password">Forgot Password?</span></span>
               <span style="font-weight:normal !important; float:right"><span id="show-register">Not a member? Sign-Up</span></span>	
             </div>
+
+    <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit"
+        async defer>
+    </script>
           </div>
 		  <div style="clear:both"></div>
 		<div style="color:#888; text-align: center !important; font-size:11px; font-weight:normal;margin-top:12px">By continuing, you are indicating that you accept our<br><u>Terms of Service</u> and <u>Privacy Policy.</u></div>
