--- a/index.html
+++ b/index.html
@@ -756,9 +756,9 @@
               <input style="margin-top:5px" type="email" id="registration-email" placeholder="E-Mail">
               <label>Confirm E-mail <span style="color:#ff6600">*</span></label> 
               <input style="margin-top:5px" type="email" id="registration-reemail" autocomplete="off" placeholder="Confirm E-Mail">
-              <label>Password <span style="color:#ff6600">*</span><span style="font-weight:normal; font-size:13px"> - Don't use your real e-mail password.</span></label>
+              <label>Password <span style="color:#ff6600">*</span><span style="font-weight:normal; font-size:13px"></span></label>
               <input style="margin-top:5px" type="password" id="registration-password" placeholder="Password">
-                            <span style="float:left; margin-top:12px" id="captcha-signup"></span><input autocomplete="off" style="margin-top:10px;width:180px;float:right" type="text" placeholder="Captcha" id="cpatchaTextBoxSignUp">
+			  <span style="float:left; margin-top:12px" id="captcha-signup"></span><input autocomplete="off" style="margin-top:10px;width:180px;float:right" type="text" placeholder="Captcha" id="cpatchaTextBoxSignUp">
 			  <button style="width:100% !important;" id="register">Sign Up</button><br>
               <span style="font-weight:normal !important; float:right"><span id="show-login">Already a member? Sign-In</span></span>
               <br>
