--- a/pcc-calculation.html
+++ b/pcc-calculation.html
@@ -407,9 +407,10 @@
               <input type="email" id="registration-email" placeholder="E-Mail">
               <label>Confirm E-mail <span style="color:#ff6600">*</span></label> 
               <input type="email" id="registration-reemail" autocomplete="off" placeholder="Confirm E-Mail">
-              <label>Password <span style="color:#ff6600">*</span><span style="font-weight:normal; font-size:13px"> - Don't use your real email password!</span></label>
+              <label>Password <span style="color:#ff6600">*</span><span style="font-weight:normal; font-size:13px"></span></label>
               <input type="password" id="registration-password" placeholder="Password">
-              <button style="width:100% !important;" id="register">Sign Up</button><br>
+ 			  <span style="float:left; margin-top:12px" id="captcha-signup"></span><input autocomplete="off" style="margin-top:10px;width:180px;float:right" type="text" placeholder="Captcha" id="cpatchaTextBoxSignUp">
+			<button style="width:100% !important;" id="register">Sign Up</button><br>
               <span style="font-weight:normal !important; float:right"><span id="show-login">Already a member? Sign-In</span></span>
               <br>
             </div>
@@ -420,7 +421,8 @@
               <input type="email" id="login-email" placeholder="E-Mail">
               <label>Password</label>
               <input type="password" id="login-password" placeholder="Password">
-              <button style="width:100% !important;" id="login">Login</button>
+              <span style="float:left; margin-top:12px" id="captcha-signin"></span><input autocomplete="off" style="margin-top:10px;width:180px;float:right" type="text" placeholder="Captcha" id="cpatchaTextBoxSignIn">
+			  <button style="width:100% !important;" id="login">Login</button>
               <span style="font-weight:normal"> <span id="forgot-password">Forgot Password?</span></span>
               <span style="font-weight:normal !important; float:right"><span id="show-register">Not a member? Sign-Up</span></span>	
             </div>
