--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Free MikroTik RouterOS Online Tools - By BuanaNETPBun.Github.io</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content='Free MikroTik RouterOS Online Tools, the most complete Router tools to make it easier for you maker RouterOS Mikrotik scripts!
       By BuanaNETPBun.Github.io' name='description'>
     <meta content='tool, pcc, queue, vpn, setting mikrotik, mikrotik, router, winbox, termimal, rsc, script, hotspot, wirelessm rtrwnet' name='keywords'>
@@ -21,6 +21,16 @@
     <script async defer src="https://buttons.github.io/buttons.js"></script>   
     <script data-ad-client="ca-pub-9740800920365268" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>  
     <style>
+      /* --------------------------------------------
+      ################################################
+      # Tools For Mikrotik By BuanaNETPBun.Github.io
+      # Designer  : Agus Ramadhani / BuanaNET
+      # Github    : https://buananetpbun.github.io
+      # Site      : http://www.o-om.com
+      # Sosmed    : https://fb.me/buananetmikrotik/	
+      ################################################
+      ----------------------------------------------- */  
+
       /* --------------------------------------------
       ################################################
       # Tools For Mikrotik By BuanaNETPBun.Github.io
@@ -104,27 +114,6 @@
       a:hover {
       color: red;
       }
-      @media screen and (max-width: 1024px){
-      .mymenu {
-      width:100% !important;;
-      } 
-      body{
-      background: #f9f9f9 !important;
-      padding:10px;  
-      }
-      .content {
-      max-width:100%;
-      padding:0;
-      border-radius: 3px;
-      box-shadow: 0 0 0 0;
-      background:#f9f9f9;
-      }  
-      .logo {font-size:20px;  
-      padding:15px;
-      clear:both;
-      }
-      h1, h2 {font-size: 30px; margin-bottom:20px; color:#333;display:inline;line-height:1.5;clear:both}
-      }  
       .resp-sharing-button__link,
       .resp-sharing-button__icon {
       display: inline-block
@@ -530,6 +519,37 @@
       padding: 10px;
       text-align: right;
       }	  
+      @media screen and (max-width: 1024px){
+      .mymenu {
+      width:100% !important;
+      } 
+      .mymenu ul {
+      background-image:none !important;
+      }        
+      body{
+      background: #f9f9f9 !important;
+      padding:10px;  
+      }
+      .content {
+      max-width:100%;
+      padding:0;
+      border-radius: 3px;
+      box-shadow: 0 0 0 0;
+      background:#f9f9f9;
+      }  
+      .logo {font-size:20px;  
+      padding:10px;
+      clear:both;
+        height:100px;
+      }
+      h1, h2 {font-size: 30px; margin-bottom:20px; color:#333;display:inline;line-height:1.5;clear:both}
+      
+        .gsc-search-box{display:none !important;}
+        .text-join-now {clear: both !important}
+      }  	  
+ 
+     
+ 
     </style>
   </head>
   <body>
@@ -547,7 +567,7 @@
       <div id="show-login-menu">
         <button style="width:120px !important;  padding:4px; margin:4px; margin-left:10px; margin-bottom:10px;font-weight:bold" onclick="callmodalLogin();showLogin()">Login</button>
         <button style="width:120px !important; padding:4px; margin:4px; font-weight:bold" onclick="javascript:callmodalLogin();showRegistration()">Join Member</button>
-        <span style="font-size:13px; font-weight:normal; color:#ff6600; font-weight:bold; margin-left:10px">Only one login to access all my tools, join now, it's free!</span>
+        <span class="text-join-now" style="font-size:13px; font-weight:normal; color:#ff6600; font-weight:bold; margin-left:10px">Only one login to access all my tools, join now, it's free!</span>
       </div>
       <div id="homepage" class="hide">
         <button style="width:75px !important; padding:4px; margin:4px; margin-left:10px; margin-bottom:10px; font-weight:bold; font-size:14px" id="signout">Logout</button>
