--- a/login/index.html
+++ b/login/index.html
@@ -141,7 +141,7 @@
       position: fixed;
       background: #000;
       border-radius: 5px;
-      width: 500px;
+      width: 380px;
       z-index: 10;
       box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);	
       }
@@ -159,50 +159,7 @@
       color: #fff;
       }
       #dialogbox>div>#dialogboxbody {
-      font-weight: bold;
-      font-size: 15px;
-      padding: 20px;
-      color: #ccc;
-      }
-      #dialogbox>div>#dialogboxfoot {
-      padding: 10px;
-      text-align: right;
-      }	  
-      /* CUSTOM ALERT */
-      #dialogoverlay {
-      display: none;
-      opacity: .5;
-      position: fixed;
-      top: 0px;
-      left: 0px;
-      background: #292929;
-      width: 100%;
-      z-index: 10;
-      }
-      #dialogbox {
-      display: none;
-      position: fixed;
-      background: #000;
-      border-radius: 5px;
-      width: 530px;
-      z-index: 10;
-      box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);	
-      }
-      #dialogbox>div {
-      border-radius: 5px;
-      margin: 3px;
-      background: #292929 url(https://user-images.githubusercontent.com/42666125/147363663-30767ef4-09af-48d6-8ea1-ee7a1c09e90f.png) no-repeat;
-      }
-      #dialogbox>div>#dialogboxhead {
-      background: #111;
-      opacity: 0.5;
-      font-weight: bold;
-      font-size: 16px;
-      padding: 10px;
-      color: #fff;
-      }
-      #dialogbox>div>#dialogboxbody {
-      font-weight: bold;
+      font-weight: normal;
       font-size: 15px;
       padding: 20px;
       color: #ccc;
@@ -605,7 +562,7 @@
       </div>
     </div>
     <div id="myLogin" class="modal-login">
-      <div style="width: 400px;" class="modal-content">
+      <div style="width: 380px;" class="modal-content">
         <div class="forms-out">
           <div class="forms-in">
 			  <div class="myButtonGoogle">
