--- a/index.html
+++ b/index.html
@@ -516,7 +516,32 @@
 @media screen and (max-width: 1300px){
 }
 @media screen and (max-width: 1024px) {
-
+      .mymenu {
+      width:100% !important;
+      } 
+      .mymenu ul {
+      background-image:none !important;
+      }        
+      body{
+      background: #f9f9f9 !important;
+      padding:10px;  
+      }
+      .content {
+      max-width:100%;
+      padding:0;
+      border-radius: 3px;
+      box-shadow: 0 0 0 0;
+      background:#f9f9f9;
+      }  
+      .logo {font-size:20px;  
+      padding:10px;
+      clear:both;
+        height:100px;
+      }
+      h1, h2 {font-size: 30px; margin-bottom:20px; color:#333;display:inline;line-height:1.5;clear:both}
+      
+        .gsc-search-box{display:none !important;}
+        .text-join-now {clear: both !important}
 }
 @media screen and (max-width: 992px) {
 
