--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
       h1, h2 {font-size: 30px; margin-bottom:20px; color:#333;display:inline;line-height:1.5;clear:both}
       
         .gsc-search-box{display:none !important;}
-        .text-join-now {clear: both !important}
+        .text-join-now {display:none; !important}
 }
 @media screen and (max-width: 992px) {
 
@@ -578,7 +578,7 @@
       background-image:none !important;
         font-size:12px ;
       }   
-      button {font-size:10px; width:100px !important}
+      button {font-size:10px; width:100px !important; clear:both}
       body{     
       padding:5px;  
             font-size:11px;
@@ -601,14 +601,13 @@
       clear:both;
 
             font-sze:10px;
-      }    
+      }  
      h3 {font-size: 15px; margin-bottom:10px; clear:both}
       
        h1 {font-size: 23px; margin-bottom:10px; clear:both}
         .gsc-search-box{display:none !important;}
         .text-join-now {clear: both !important}
-      bottom {font-sieze:11px}
-      }   
+      .text-join-now {display:none !important;}
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min--moz-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) {
 /* -- 2x -- */
