--- a/login/index.html
+++ b/login/index.html
@@ -30,18 +30,18 @@
             <div class="avatar">
                <img alt="avatar" id="myavatar" src="https://user-images.githubusercontent.com/42666125/199234814-c320e1fc-da95-489e-a955-43b82e3f4b46.png" >
             </div>
-            <span style="font-weight:bold; font-size:22px; color:#fff">PROFILE - <span id="profile-email" style="color:#fff"></span></span>
+            <span style="font-weight:bold; font-size:22px; color:#fff"><span id="profile-email" style="color:#fff"></span></span>
             <br><br>
             <span style="font-weight:bold; font-size:14px">E-MAIL AUTH <span style="margin-left:42px;margin-right:6px">:</span> <span id="email_Verified"></span></span> <button id="verify" style="width:170px !important; padding:4px; margin-left:5px; font-weight:bold;font-size:14px; background-color:red">VERIFY YOUR E-MAIL</button><br><br>
             <span style="font-weight:bold;font-size:14px">E-MAIL IDENTIFIER <span style="margin-left:10px; margin-right:6px">:</span> <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span><br><br>
             <span style="font-weight:bold; font-size:14px">USER UID <span style="margin-left:70px;margin-right:6px">:</span> <span style="color:#ff6600;font-weight:bold;" id="user-id"></span></span><br><br>
             <span style="font-weight:bold; font-size:14px">YOUR NAME <span style="margin-left:48px;margin-right:6px">:</span> <span style="color:#ff6600;font-weight:bold;" id="your-name"></span></span>
             <br><br><br>
-            <button style="padding:6px; width:124px" id="back-home" onclick="location.href = 'https://buananetpbun.github.io'">Back Home</button>
-            <button style="padding:6px; width:124px" id="edit-user" onclick="CallModalChangeProfileShow()">Edit Profile</button>
-            <button style="padding:6px; width:124px " onclick="CallModalChangePasswordShow()">Set Password</button>
-            <button style="padding:6px; width:124px" id="delete-user" onclick="DeleteMember()">Delete Account</button>
-            <button style="margin-bottom:10px;padding:6px;width:100px" id="signout">Logout</button>
+            <button  id="back-home" onclick="location.href = 'https://buananetpbun.github.io'">Back Home</button>
+            <button  id="edit-user" onclick="CallModalChangeProfileShow()">Edit Profile</button>
+            <button  onclick="CallModalChangePasswordShow()">Set Password</button>
+            <button  id="delete-user" onclick="DeleteMember()">Delete Account</button>
+            <button  id="signout">Logout</button>
          </div>
       </div>
       <div id="myChangePassword" class="modal-change-password">
