--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Free MikroTik RouterOS Online Tools - By BuanaNETPBun.Github.io</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta content='width=device-width, initial-scale=1, maximum-scale=1' name='viewport'/>
     <meta content='Free MikroTik RouterOS Online Tools, the most complete Router tools to make it easier for you maker RouterOS Mikrotik scripts!
       By BuanaNETPBun.Github.io' name='description'>
     <meta content='tool, pcc, queue, vpn, setting mikrotik, mikrotik, router, winbox, termimal, rsc, script, hotspot, wirelessm rtrwnet' name='keywords'>
