--- a/index.html
+++ b/index.html
@@ -527,10 +527,13 @@ display: none;
 .content {
 width:100% !important;
 padding:8px;
-border-radius: 0px;
 }
 }
 @media screen and (max-width:700px){
+.content {
+width:95% !important;
+
+}
 .mymenu {
 width:95% !important;
 } 
