--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ width: 700px;
 border-radius: 0 0 5px 5px;
 border: 2px solid #f9f9f9;
 font-weight: bold;
-font-size: 18px;
+font-size: 17px;
 position: relative;
 padding-left:10px;
 }
@@ -615,7 +615,7 @@ font-size: 10pt;
         <button id="ShowProfile" style="width:115px !important; padding:4px; margin:4px; font-weight:bold;font-size:14px; background-color:#ff6600" onclick="location.href = 'https://buananetpbun.github.io/login'">Member Area</button>
         <span style="font-weight:normal;font-size:14px">ID: <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span>
         <span style="font-weight:normal; font-size:14px"> - ACTIVATED: [ <span id="email_Verified"></span> ]</span>
-        <button id="verify" style="width:170px !important; padding:4px; margin:4px; font-weight:bold;font-size:14px; background-color:red">VERIFY YOUR E-MAIL</button>
+        <button id="verify" style="display:none;width:170px !important; padding:4px; margin:4px; font-weight:bold;font-size:14px; background-color:red">VERIFY YOUR E-MAIL</button>
       </div>
     </div>
     <div class="content">
