--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@ display: none;
 	  
 /* -- RESPONSIVE -- */
 
-@media screen and (max-width:700px){
+@media screen and (max-width:768px){
 h1{font-size:40px}
 
 
@@ -552,6 +552,7 @@ width:100%;
       }	  
 }
 @media screen and (max-width:600px){
+.hide-homepage {display:none}
 .text-join-now {display:none}
 .show-login-menu{
 display: flex;
@@ -613,10 +614,12 @@ font-size: 10pt;
       <div id="homepage" class="hide">
         <button style="width:75px !important; padding:4px; margin:4px; margin-left:10px; margin-bottom:10px; font-weight:bold; font-size:14px" id="signout">Logout</button>
         <button id="ShowProfile" style="width:115px !important; padding:4px; margin:4px; font-weight:bold;font-size:14px; background-color:#ff6600" onclick="location.href = 'https://buananetpbun.github.io/login'">Member Area</button>
-        <span style="font-weight:normal;font-size:14px">ID: <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span>
+        <div class="hide-homepage">
+		<span style="font-weight:normal;font-size:14px">ID: <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span>
         <span style="font-weight:normal; font-size:14px"> - ACTIVATED: [ <span id="email_Verified"></span> ]</span>
         <button id="verify" style="display:none;width:170px !important; padding:4px; margin:4px; font-weight:bold;font-size:14px; background-color:red">VERIFY YOUR E-MAIL</button>
-      </div>
+         </div>
+	  </div>
     </div>
     <div class="content">
       <div style="float:left; margin-right:5px; margin-top:10px">
