--- a/index.html
+++ b/index.html
@@ -530,8 +530,7 @@
 } 
 
       @media screen and (max-width:768px){
-                .modal-content {width:390px !important;}
-        .qris {padding-left:25%;width:100%; text-align: center; margin-bottom:20px}
+      .qris {display:none}
       h1{font-size:40px}
       .content {
       width:100% !important;
