--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
       width:100%;	
       margin-bottom:10px;
       }	
-	  .show-hompage-menu{
+	  .show-homepage-menu{
       display: flex;
       justify-content: center;
       width:100%;	
@@ -621,13 +621,13 @@
       </div>
       <div class="show-homepage-menu">
 	  <div id="homepage" class="hide">
-        <button style="width:75px !important; padding:6px; margin:4px; margin-left:10px; margin-bottom:10px; font-weight:bold; font-size:14px" id="signout">Logout</button>
+        <button style="width:115px !important; padding:6px; margin:4px; margin-left:10px; margin-bottom:10px; font-weight:bold; font-size:14px" id="signout">Logout</button>
         <button id="ShowProfile" style="width:115px !important; padding:6px; margin:4px; font-weight:bold;font-size:14px; background-color:#ff6600" onclick="location.href = 'https://buananetpbun.github.io/login'">Member Area</button>
         <span class="hide-homepage">
           <span style="font-weight:normal;font-size:14px">ID: <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span>
           <span style="font-weight:normal; font-size:14px"> - ACTIVATED: [ <span id="email_Verified"></span> ]</span>
          </span>
-		 <button id="verify" style="width:150px !important; padding:6px; margin:4px; font-weight:bold;font-size:14px; background-color:red">Verify E-Mail</button>
+		 <button id="verify" style="width:115px !important; padding:6px; margin:4px; font-weight:bold;font-size:14px; background-color:red">Verify E-Mail</button>
       </div>
 	  </div>
     </div>
