--- a/index.html
+++ b/index.html
@@ -265,7 +265,8 @@
       font-weight: bold;
       font-size: 16px;
       position: relative;
-      padding-left:10px;
+      padding-left:12px;
+	  padding-right:12px;
       }
       .mymenu ul {
       list-style-type: none;
@@ -571,6 +572,10 @@
       justify-content: center;
       margin-top:15px;	
       }	
+	  .mymenu {
+	  padding-left:0px;
+	 padding-right:0px;
+      } 
       .mymenu ul {
       background: none !important;
       justify-content: center;
