--- a/index.html
+++ b/index.html
@@ -609,19 +609,19 @@
         <li><a target="_blank" href="https://fb.me/buananetmikrotik/">CONTACT</a></li>
       </ul>
       <div class="show-login-menu" id="show-login-menu">
-        <button style="width:100px !important;  padding:6px; margin:4px; font-weight:bold;font-size:13px" onclick="callmodalLogin();showLogin()">Login</button>
-        <button style="width:100px !important; padding:6px; margin:4px; font-weight:bold;font-size:13px" onclick="javascript:callmodalLogin();showRegistration()">Register</button>
+        <button style="width:100px !important;  padding:6px; margin:4px; font-weight:bold;font-size:14px" onclick="callmodalLogin();showLogin()">Login</button>
+        <button style="width:100px !important; padding:6px; margin:4px; font-weight:bold;font-size:14px" onclick="javascript:callmodalLogin();showRegistration()">Register</button>
         <span class="text-join-now" style="font-size:13px; font-weight:normal; color:#ff6600; font-weight:bold; margin-left:10px">Only one login to access all my tools, join now, it's free!</span>
       </div>
       <div class="show-homepage-menu">
         <div id="homepage" class="hide">
-          <button style="width:100px !important; padding:6px; margin:4px; margin-left:0px; margin-bottom:10px; font-weight:bold; font-size:13px" id="signout">Logout</button>
-          <button id="ShowProfile" style="width:100px !important; padding:6px; margin:4px; font-weight:bold;font-size:13px; background-color:#ff6600" onclick="location.href = 'https://buananetpbun.github.io/login'">Profile</button>
+          <button style="width:100px !important; padding:6px; margin:4px; margin-left:0px; margin-bottom:10px; font-weight:bold; font-size:14px" id="signout">Logout</button>
+          <button id="ShowProfile" style="width:100px !important; padding:6px; margin:4px; font-weight:bold;font-size:14px; background-color:#ff6600" onclick="location.href = 'https://buananetpbun.github.io/login'">My Profile</button>
           <span class="hide-homepage">
-          <span style="font-weight:normal;font-size:14px">ID: <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span>
-          <span style="font-weight:normal; font-size:14px"> - ACTIVATED: [ <span id="email_Verified"></span> ]</span>
+          <span style="font-weight:normal;font-size:13px">ID: <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span>
+          <span style="font-weight:normal; font-size:13px"> - ACTIVATED: [ <span id="email_Verified"></span> ]</span>
           </span>
-          <button id="verify" style="width:100px !important; padding:6px; margin:4px; font-weight:bold;font-size:13px; background-color:red">Verify E-Mail</button>
+          <button id="verify" style="width:100px !important; padding:6px; margin:4px; font-weight:bold;font-size:14px; background-color:red">Verify E-Mail</button>
         </div>
       </div>
     </div>
