--- a/mikrotik-netwatch-monitoring.html
+++ b/mikrotik-netwatch-monitoring.html
@@ -280,7 +280,7 @@
     </style>
     <link rel="stylesheet" href="./login/login.css">
   </head>
-  <body onLoad="createTable();addRow();">
+  <body>
     <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-auth.js"></script>  
     <div id="fb-root"></div>
