--- a/login/index.html
+++ b/login/index.html
@@ -22,7 +22,7 @@
         <img src="https://user-images.githubusercontent.com/42666125/150687713-5bb23ddf-11a2-476d-a6dc-81e97eec3a77.png">
       </div>
       <ul>
-        <li><a href="https://buananetpbun.github.io">HOME</a></li>
+        <li><a href="https://buananetpbun.github.io">☰ HOME</a></li>
         <li><a target="_blank" href="https://github.com/buananetpbun">GITHUB</a></li>
         <li><a href="javascript:callmodal()">DONATE</a></li>
         <li><a target="_blank" href="https://fb.me/buananetmikrotik">CONTACT</a></li>
