--- a/index.html
+++ b/index.html
@@ -542,11 +542,9 @@
       display: inline-flex;
       width:100%;
       }
-      .logo-right {
-      justify-content: center;
-      display: inline-flex;
-      width:100%;
-      }	  
+     .logo-right {
+     text-align: center;
+       width: 100%; 
       }
       @media screen and (max-width:600px){
       .text-join-now {display:none}
