--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
       padding:0;
       margin:0;
       }    	  
-      .gsib_a{height:30px; padding-left:10px !important; }
+      .gsib_a{height:30px; padding-left:10px !important; margin-bottom:10px }
       .gsc-input input{background:#fff !important; }
       .gsc-input-box {border-radius:5px; height:33px;background:#fff !important;margin-right: -6px !important; line-height:normal !important}
       .gsc-search-button-v2 {border-radius:5px !important; height:33px !important;}
