--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     <meta property="og:url" content="https://buananetpbun.github.io">
     <meta name="yandex-verification" content="2185da3345ca44f7" >
     <script async defer src="https://buttons.github.io/buttons.js"></script>   
-    <script data-ad-client="ca-pub-9740800920365268" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>  
     <style>
       /* --------------------------------------------
       ################################################
@@ -636,6 +635,18 @@
         <div class="gcse-searchbox"></div>
       </div>
       <div style="clear:both;"></div>
+	  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9740800920365268"
+     crossorigin="anonymous"></script>
+<!-- IKLAN ATAS DAN BAWAH -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-9740800920365268"
+     data-ad-slot="3628790292"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
       <div class="logo">
         <div class="logo-right" style="float:right;">
           <a class="github-button" style="padding-right:5px !important" href="https://github.com/buananetpbun" data-show-count="true" aria-label="Follow">Follow</a> 
