--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@
       <div style="float:right;width:300px;">
         <div class="gcse-searchbox"></div>
       </div>
-      <div style="clear:both;"></div>
+      <div style="margin-top20px;clear:both;"></div>
 	  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9740800920365268"
      crossorigin="anonymous"></script>
 <!-- IKLAN ATAS DAN BAWAH -->
