--- a/index.html
+++ b/index.html
@@ -624,18 +624,7 @@
       </div>
     </div>
     <div class="content">
-      <div style="float:left; margin-right:5px; margin-top:10px">
-        <div  class="fb-like" data-href="https://www.facebook.com/buananetmikrotik" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="false"></div>
-      </div>
-      <div style="float:left;margin-top:10px">    
-        <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fbuananetpbun.github.io%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false" alt="Hits">
-      </div>
-      <script async src="https://cse.google.com/cse.js?cx=751bf7c3dc13f7e72"></script>
-      <div style="float:right;width:300px;">
-        <div class="gcse-searchbox"></div>
-      </div>
-      <div style="margin-top:20px;clear:both;"></div>
-	  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9740800920365268"
+		  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9740800920365268"
      crossorigin="anonymous"></script>
 <!-- IKLAN ATAS DAN BAWAH -->
 <ins class="adsbygoogle"
@@ -647,6 +636,17 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+      <div style="float:left; margin-right:5px; margin-top:10px">
+        <div  class="fb-like" data-href="https://www.facebook.com/buananetmikrotik" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="false"></div>
+      </div>
+      <div style="float:left;margin-top:10px">    
+        <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fbuananetpbun.github.io%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false" alt="Hits">
+      </div>
+      <script async src="https://cse.google.com/cse.js?cx=751bf7c3dc13f7e72"></script>
+      <div style="float:right;width:300px;">
+        <div class="gcse-searchbox"></div>
+      </div>
+      <div style="clear:both;"></div>
       <div class="logo">
         <div class="logo-right" style="float:right;">
           <a class="github-button" style="padding-right:5px !important" href="https://github.com/buananetpbun" data-show-count="true" aria-label="Follow">Follow</a> 
