--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-<div style="clear:both;"></div>
+<div style="width:100%; margin-top:20px"></div>
       <div style="float:left; margin-right:5px; margin-top:20px">
         <div  class="fb-like" data-href="https://www.facebook.com/buananetmikrotik" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="false"></div>
       </div>
