--- a/index.html
+++ b/index.html
@@ -823,6 +823,18 @@
       <div style="margin-top:20px; text-align:center; font-size:12px">
         © Copyright 2020-<span id="year">2022</span> <a href="https://buananetpbun.github.io">buananetpbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a> - Creator by <a href="https://www.facebook.com/buananet.pbun">BuanaNet.Pbun</a> 
       </div>
+	  		  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9740800920365268"
+     crossorigin="anonymous"></script>
+<!-- IKLAN ATAS DAN BAWAH -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-9740800920365268"
+     data-ad-slot="3628790292"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     </div>
     <div id="myLogin" class="modal-login">
       <div style="width: 350px;" class="modal-content">
